# ChangeLog for media-plugins/gst-plugins-pulse
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-pulse/ChangeLog,v 1.28 2010/01/28 20:50:01 jer Exp $

  28 Jan 2010; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-pulse-0.10.17.ebuild:
  Marked ~hppa (bug #302110).

  29 Dec 2009; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-pulse-0.10.16.ebuild:
  sparc stable wrt #290343

  29 Nov 2009; Tobias Klausmann <klausman@gentoo.org>
  gst-plugins-pulse-0.10.16.ebuild:
  Stable on alpha, bug #290343

  18 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  gst-plugins-pulse-0.10.16.ebuild:
  x86 stable, bug 290343

*gst-plugins-pulse-0.10.17 (17 Nov 2009)

  17 Nov 2009; Mart Raudsepp <leio@gentoo.org>
  -gst-plugins-pulse-0.10.15.ebuild, +gst-plugins-pulse-0.10.17.ebuild:
  Version bump. Support for Pulseaudio PLAY/PAUSE requests, other fixes and
  improvements

  10 Nov 2009; Olivier Crête <tester@gentoo.org>
  gst-plugins-pulse-0.10.16.ebuild:
  Stable on amd64, bug #290343

  12 Sep 2009; Olivier Crête <tester@gentoo.org>
  gst-plugins-pulse-0.10.16.ebuild:
  New pulse elements don't work with pulseaudio 0.9.9

*gst-plugins-pulse-0.10.16 (07 Sep 2009)

  07 Sep 2009; Olivier Crête <tester@gentoo.org>
  +gst-plugins-pulse-0.10.16.ebuild:
  Version bump

*gst-plugins-pulse-0.10.15 (23 Aug 2009)

  23 Aug 2009; Mart Raudsepp <leio@gentoo.org>
  gst-plugins-pulse-0.10.14.ebuild, +gst-plugins-pulse-0.10.15.ebuild:
  Version bump - complete rewrite/overhaul of pulsesink

  05 Aug 2009; Mart Raudsepp <leio@gentoo.org>
  -gst-plugins-pulse-0.9.7.ebuild, -gst-plugins-pulse-0.10.11.ebuild:
  Remove old

  01 Jul 2009; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-pulse-0.10.14.ebuild:
  sparc stable wrt #266986

  21 May 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking gst-plugins-pulse-0.10.14 ~ppc64 for bug 266986

  21 May 2009; Brent Baude <ranger@gentoo.org> ChangeLog: