@@ -1,11 +1,11 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-pulse/Attic/gst-plugins-pulse-0.10.16.ebuild,v 1.6 2009/12/29 18:12:42 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-pulse/Attic/gst-plugins-pulse-0.10.16.ebuild,v 1.7 2010/02/07 19:24:54 armin76 Exp $
 
 inherit gst-plugins-good
 
 DESCRIPTION="GStreamer plugin for the PulseAudio sound server"
-KEYWORDS="alpha amd64 ~ppc ~ppc64 sparc x86"
+KEYWORDS="alpha amd64 ~arm ~ia64 ~ppc ~ppc64 ~sh sparc x86"
 IUSE=""
 
 RDEPEND=">=media-sound/pulseaudio-0.9.15
