@@ -1,11 +1,11 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-pulse/Attic/gst-plugins-pulse-0.10.17.ebuild,v 1.2 2010/01/28 20:50:01 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-pulse/Attic/gst-plugins-pulse-0.10.17.ebuild,v 1.3 2010/02/07 19:24:54 armin76 Exp $
 
 inherit gst-plugins-good
 
 DESCRIPTION="GStreamer plugin for the PulseAudio sound server"
-KEYWORDS="~alpha ~amd64 ~hppa ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sh ~sparc ~x86"
 IUSE=""
 
 # >=0.9.15 ensures working per-stream volume
